# color

./: CMakeLists.txt  README.md  example.cpp
.github/workflows/: ubuntu_gcc_build_test.yml
include/: color.hpp
src/color/: CMakeLists.txt
src/color/include/color/: color.hpp
src/executables/: CMakeLists.txt
src/executables/src/: color_example.cpp  fuzz_color_class.cpp
src/tests/: CMakeLists.txt
src/tests/src/: test_color.cpp
src/tests/src/color/: test_color.cpp
tests/: CMakeLists.txt  test_color.cpp
